# typercut

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  SPEC.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_materials_snippets.sql  20240101000003_create_sessions_events.sql  20240101000004_create_concept_nodes.sql  20240101000005_create_cut_collections.sql
backend/src/: config.rs  generate.rs  lib.rs  main.rs
backend/src/auth/: google.rs  jwt.rs  routes.rs
backend/src/cut_collections/: routes.rs
backend/src/db/: cut_collections.rs  materials.rs  mod.rs  sessions.rs  snippets.rs  users.rs
backend/src/entity/: cut_collection.rs  event.rs  material.rs  mod.rs  session.rs  snippet.rs  user.rs
backend/src/events/: mod.rs
backend/src/materials/: routes.rs
backend/src/sessions/: routes.rs
backend/tests/: integration.rs
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
frontend/e2e/: auth.spec.ts  ingestion.spec.ts  typing.spec.ts
frontend/e2e/helpers/: auth.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthCallback.tsx  AuthContext.tsx  LoginPage.tsx
frontend/src/fixtures/: scheduler-essay.ts
notebooks/: github_ingestion_vectors.ipynb  requirements.txt
scripts/: init-postgres.sh
tests/integration/: fingerprint.py  run.sh  scrape.py
(+24 files in other folders)
