[package]
name = "typercut-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OAuth2 + HTTP
oauth2 = "4"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# Database — SeaORM on top of sqlx/postgres
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
] }
# sqlx kept for migrate! macro (raw SQL files)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Errors + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
